@@ -34,6 +34,7 @@ setup(
     package_dir = {'':'src'},
     namespace_packages = ['plone', 'plone.recipe'],
     install_requires = ['zc.buildout', 'setuptools', 'zc.recipe.egg'],
+    tests_require=['zope.testing'],
     zip_safe=False,
     entry_points = {'zc.buildout': ['default = %s:Recipe' % name]},
     )
