@@ -1,0 +1,79 @@
+===========================
+plone.recipe.zope2zeoserver
+===========================
+
+
+This is the doctest for plone.recipe.zope2instance. It ensures the template
+works fine. It is based on zc.buildout testing module::
+
+    >>> from zc.buildout.testing import * 
+    >>> from os.path import join
+    >>> import sys, os
+
+Let's create a minimum buildout that uses the current 
+plone.recipe.zope2instance::
+
+    >>> write('buildout.cfg',
+    ... '''
+    ... [buildout]
+    ... parts = zeo
+    ... develop = 
+    ...     %(recipe_location)s 
+    ...
+    ... [zeo]
+    ... recipe = plone.recipe.zope2zeoserver
+    ... 
+    ... ''' % globals())
+
+Let's run it::
+
+    >>> print system(join('bin', 'buildout')),
+    Develop: '...'
+    ...
+    Generated script '.../bin/zeo'.
+    Generated script '.../bin/zeopack'.
+
+We should have a zope instance, with a basic zeo.conf::
+
+    >>> zeo = os.path.join(sample_buildout, 'parts', 'zeo')
+    >>> print open(os.path.join(zeo, 'etc', 'zeo.conf')).read()
+    %define INSTANCE /sample-buildout/parts/zeo
+    <BLANKLINE>
+    <zeo>
+      address 8100
+      read-only false
+      invalidation-queue-size 100
+      pid-filename /sample-buildout/var/zeo.pid
+    </zeo>
+    <BLANKLINE>
+    <filestorage 1>
+      path /sample-buildout/var/filestorage/Data.fs
+    </filestorage>
+    <BLANKLINE>
+    <eventlog>
+      level info
+      <logfile>
+        path /sample-buildout/var/log/zeo.log
+        format %(message)s
+      </logfile>
+    </eventlog>
+    <BLANKLINE>
+    <runner>
+      program $INSTANCE/bin/runzeo
+      socket-name /sample-buildout/var/zeo.zdsock
+      daemon true
+      forever false
+      backoff-limit 10
+      exit-codes 0, 2
+      directory $INSTANCE
+      default-to-interactive true
+    <BLANKLINE>
+    <BLANKLINE>
+      # This logfile should match the one in the zeo.conf file.
+      # It is used by zdctl's logtail command, zdrun/zdctl doesn't write it.
+      logfile /sample-buildout/var/log/zeo.log
+    </runner>
+    <BLANKLINE>
+    <BLANKLINE>
+    <BLANKLINE>
+
