@@ -4,7 +4,9 @@ Change History
 0.11 (unreleased)
 -----------------
 
-
+- added a test environement and a basic doctest to validate
+  the recipe.
+  [tarek]
 
 0.10
 ----
